<resources>
    <string name="app_name">HellEng</string>

    <!-- Main Activity -->
    <string name="app_home">Home</string>
    <string name="app_chat">Chats</string>
    <string name="app_courses">Courses</string>
    <string name="app_profile">Profile</string>

    <string name="app_friends_list">Friends</string>
    <string name="app_friend_requests">Friend Requests</string>
    <string name="app_find_users">Find Users</string>


    <!-- Buttons Text -->
    <string name="start">Begin</string>
    <string name="more">More..</string>

    <!-- Tittles -->
    <string name="hell_test_maker" translatable="false">Hell\'s Test Maker</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="grammar">Grammar</string>
    <string name="audition">Audition</string>

    <!-- Secondary Texts -->
    <string name="second_text_test_maker">Create and share your tests</string>
    <string name="second_text_vocabulary">Expand your speech with new words</string>
    <string name="second_text_grammar">Learn grammar to build sentences correctly</string>
    <string name="second_text_audition">Improve your listening comprehension</string>

    <string name="second_text_grammar_fs_t2" translatable="false">Put the words into the correct order. You will have different types of sentences. Use punctuation marks (full stops and question marks) at the end of the sentences.</string>
    <string name="second_text_grammar_fs_t1" translatable="false">Choose the right variant.</string>

    <!-- Tests Name -->
    <string name="present_simple" translatable="false">Present Simple</string>
    <string name="future_simple" translatable="false">Future Simple</string>
    <string name="past_simple" translatable="false">Past Simple</string>
    <string name="content_description_media" translatable="false">media</string>

    <!-- Menu Items -->
    <string name="settings">Settings</string>
    <string name="reference">Reference</string>
    <string name="about_the_app">About the app</string>
    <string name="sign_out">Sign out</string>
    <string name="friends_list">Friends List</string>
    <string name="find_users">Find Users</string>
    <string name="friend_requests">Friend Requests</string>

    <!-- Settings -->
    <string name="language">Language</string>
    <string name="starting_fragment">Starting Fragment</string>
    <string name="default_notification_channel_id" translatable="false">Channel ID</string>

</resources>