<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title=" "
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title=" "
        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/reference"
        android:title="@string/reference"
        app:showAsAction="never" />

    <item
        android:id="@+id/aboutTheApp"
        android:title="@string/about_the_app"
        app:showAsAction="never" />

</menu>