<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:elevation="10dp"
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_courses"
            app:titleTextColor="?attr/titleTextColor"
            app:menu="@menu/top_app_bar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_baseline_storage_24"
            app:navigationIconTint="?attr/navigationIconTint"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/courses_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewVocabulary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:checkable="true"
                android:focusable="true"
                android:clickable="true"
                app:cardElevation="1dp"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:id="@+id/test1Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:contentDescription="@string/content_description_media"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/vocabulary_image_asset" />

                    <TextView
                        android:id="@+id/textViewCourse1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/vocabulary"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewSecondaryVocabulary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/second_text_vocabulary"
                        android:textColor="?android:attr/textColorSecondary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <Button
                            android:id="@+id/btnVocabulary"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:padding="5dp"
                            android:text="@string/start" />

                        <Button
                            android:id="@+id/btnVocabularyMore"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="5dp"
                            android:text="@string/more" />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewGrammar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkable="true"
                android:focusable="true"
                android:clickable="true"
                app:cardElevation="1dp"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:id="@+id/test2Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/grammar_image_asset" />

                    <TextView
                        android:id="@+id/textViewCourse2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/grammar"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewSecondaryGrammar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/second_text_grammar"
                        android:textColor="?android:attr/textColorSecondary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <Button
                            android:id="@+id/btnGrammar"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:padding="5dp"
                            android:text="@string/start" />

                        <Button
                            android:id="@+id/btnGrammarMore"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="5dp"
                            android:text="@string/more" />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewAudition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:checkable="true"
                android:focusable="true"
                android:clickable="true"
                app:cardElevation="1dp"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:id="@+id/test3Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/listening_image_asset" />

                    <TextView
                        android:id="@+id/textViewCourse3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/audition"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewSecondaryListening"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Secondary Text"
                        android:textColor="?android:attr/textColorSecondary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <Button
                            android:id="@+id/btnAudition"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:padding="5dp"
                            android:text="@string/start" />

                        <Button
                            android:id="@+id/btnAuditionMore"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="5dp"
                            android:text="@string/more" />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Scrollable content -->


</androidx.coordinatorlayout.widget.CoordinatorLayout>