<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:elevation="10dp"
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/grammar"
            app:menu="@menu/top_app_bar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:titleTextColor="?attr/titleTextColor"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

        </com.google.android.material.appbar.AppBarLayout>

            <!-- Note: A RecyclerView can also be used -->
        <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardPresentSimple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:checkable="true"
                    android:layout_margin="10dp"
                    app:cardElevation="10dp"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:id="@+id/test1Layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/tvPrSimple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="11"
                            android:padding="5dp"
                            android:text="@string/present_simple"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvCompletedPrSimple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="20"
                            android:gravity="end"
                            android:text="0%"
                            android:textSize="24sp" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardPastSimple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    app:cardElevation="10dp"
                    app:strokeWidth="1dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:checkable="true">

                    <LinearLayout
                        android:id="@+id/test2Layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/tvPsSimple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="11"
                            android:padding="5dp"
                            android:text="@string/past_simple"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvCompletedPsSimple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="20"
                            android:gravity="end"
                            android:text="0%"
                            android:textSize="24sp" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardFutureSimple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="10dp"
                    app:strokeWidth="1dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:checkable="true">

                    <LinearLayout
                        android:id="@+id/test3Layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/tvFtSimple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="11"
                            android:padding="5dp"
                            android:text="@string/future_simple"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tvCompletedFtSimple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="20"
                            android:gravity="end"
                            android:text="0%"
                            android:textSize="24sp" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>